--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,11 @@
   "app": {
     "background": {
       "scripts": ["background.js"]
-    }
+      "browser_action": {
+    "default_icon": "icon.png",
+    "default_popup": "popup.html",
+    "default_title": "Click here!"
+      }
   },
   "icons": { "16": "calculator-16.png", "128": "calculator-128.png" }
 }
